# pupsiki

./: .gitignore  draw-si-cmp.txt  draw-si-l.txt  draw-si-r.txt  draw-si.txt  l2-denormalize.lua  l2-normalizer.lua  l2-player-II.lua  l2-player.lua  l2-prices.lua  l2-rec2orders.lua  l2-striper.lua  l2-transform.lua  l2-trends.lua  l2-uncross.lua  l2-usd-si-prices.lua  logrunner.lua  lua-static-analysis.sh  orders-test.lua  pupsik-averager-ed.lua  pupsik-averager-eu.lua  pupsik-averager-ri.lua  pupsik-averager-si-1.lua  pupsik-averager-si-2.lua  pupsik-averager-si.lua  pupsik-averager.lua  pupsik-l2-recorder.lua  pupsik-ma.lua  pupsik-recorder.lua  pupsik-scalper-si.lua  pupsik-scalper.lua  pupsik.lua  self-test.lua  test-clock.lua  test.lua
c_qlib/: CMakeLists.txt  c_ext.c  c_ext.cpp  c_ext.h.in  defs.h  gettime.cpp  minmax.cpp  minmax.h  quik_ext.def
c_qlib/q_ext/: CMakeLists.txt  gettransid.cpp  gettransid.h  minmax.cpp  minmax.h  q_ext.cpp
c_qlib/q_time/: CMakeLists.txt  gettime.h  q_time.cpp
logs/: joint-log-RIZ5-SPBFUT-trades-2015-10-08.txt  joint-log-RIZ5-SPBFUT-trades-2015-10-09.txt  joint-log-RIZ5-SPBFUT-trades-2015-10-13.txt  joint-log-RIZ5-SPBFUT-trades-2015-10-14.txt  joint-log-RIZ5-SPBFUT-trades-2015-10-19.txt  joint-log-SiZ5-SPBFUT-trades-2015-10-08.txt  joint-log-SiZ5-SPBFUT-trades-2015-10-09.txt  joint-log-SiZ5-SPBFUT-trades-2015-10-13.txt  joint-log-SiZ5-SPBFUT-trades-2015-10-14.txt  joint-log-SiZ5-SPBFUT-trades-2015-10-19.txt  log-RIZ5-SPBFUT-trades-2015-10-26.txt  log-RIZ5-SPBFUT-trades-2015-10-27.txt  log-RIZ5-SPBFUT-trades-2015-10-28.txt  log-RIZ5-SPBFUT-trades-2015-10-29.txt  log-SiZ5-SPBFUT-trades-2015-10-26.txt  log-SiZ5-SPBFUT-trades-2015-10-27.txt  log-SiZ5-SPBFUT-trades-2015-10-28.txt  log-SiZ5-SPBFUT-trades-2015-10-29.txt
qlib/: csvlog.lua  quik-avd.lua  quik-averager.lua  quik-avg.lua  quik-base-strategy.lua  quik-book-II.lua  quik-book-client.lua  quik-book.lua  quik-books.lua  quik-bricks.lua  quik-cbuffer.lua  quik-etc.lua  quik-events.lua  quik-fname.lua  quik-functor-II.lua  quik-functor.lua  quik-jit-l2-data.lua  quik-jit.lua  quik-l2-persist.lua  quik-l2-runner.lua  quik-labels.lua  quik-logger.lua  quik-order.lua  quik-params.lua  quik-recorder.lua  quik-runner.lua  quik-scalper.lua  quik-simulator-II.lua  quik-simulator.lua  quik-table.lua  quik-tables.lua  quik-test-strategy.lua  quik-time.lua  quik-utils.lua  self-test.lua
strategies/: adaptive_ma.lua  simple_ma.lua
win32-toolchain/: Toolchain-mingw32.cmake
